--- a/src/analisiRequisiti/glossario_termini.tex
+++ b/src/analisiRequisiti/glossario_termini.tex
@@ -21,7 +21,7 @@
 		Vigneto & & Rappresenta il vigneto dalla quale proviene un determinato lotto di uva acquistato. &  Tipo Uva\\
 
 		\midrule
-		Acquirente & & Colui che ha effettuato l'ordine. Può essere un privato o un'azienda &  Ordine, Privato, Azienda\\
+		Acquirente & Privato, Azienda & Colui che ha effettuato l'ordine. Può essere un privato o un'azienda &  Ordine\\
 
 		\midrule
 		Azienda & Fornitore, Negozio interno, A. Manutenz. & Un'azienda con cui la cantina ha rapporti, siano questi di fornitura, di vendita o di altra natura. &  Materia prima, Evento, Macchinario\\
@@ -42,7 +42,7 @@
 		Dipendente & & Colui che lavora per la cantina ed è assegnato ad una linea produttiva &  Linea produttiva\\
 
 		\midrule
-		Macchinario & & Strumento utilizzato all'interno di una linea produttiva &  Linea produttiva, Azienda\\
+		Macchinario & & Strumento utilizzato all'interno di una linea produttiva &  Linea produttiva, Azienda manutenzione\\
 		
 		\bottomrule
 	\end{longtable}
