--- a/src/analisiRequisiti/strutturazione_requisiti.tex
+++ b/src/analisiRequisiti/strutturazione_requisiti.tex
@@ -13,7 +13,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A TIPO DI VINO}} \\
 		\midrule
-		Relativamente ai tipi di vino rappresentiamo il nome, la gradazione alcolica, il tempo di fermentazione e l'uva utilizzata oltre che lo stato produttivo, ovvero se il vino viene prodotto ancora o è ormai fuori commercio. Importante registrare la classificazione del vino: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). \\
+		Relativamente ai tipi di vino, identificati dal nome, rappresentiamo la gradazione alcolica, il tempo di fermentazione e l'uva utilizzata oltre che lo stato produttivo, ovvero se il vino viene prodotto ancora o è ormai fuori commercio. Importante registrare la classificazione del vino: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). \\
 		\bottomrule
 	\end{tabular}
 
@@ -33,7 +33,7 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A VIGNETO}} \\
 		\midrule
-		I Vigneti sono rappresentati da un ID univoco e dalla loro posizione geografica\\
+		I vigneti sono rappresentati da un ID univoco e dalla loro posizione geografica\\
 		\bottomrule
 	\end{tabular}
 	
