--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -1,9 +1,9 @@
 Gli attributi contraddistinti dal carattere tipografico \textbf{\emph{grassetto}} sono (o fanno parte) della chiave primaria della relativa tabella. \\
-Il simbolo $\gets$ identifica una generalizzazione completa, cioè la \textbf{prima entità} è una generalizzazione \emph{completa} delle entità seguenti.
+Il simbolo $\gets$ identifica una generalizzazione completa, cioè la \textbf{prima entità} è una generalizzazione \emph{completa} delle entità seguenti.\\
 Il simbolo $\Leftarrow$ invece, identifica una generalizzazione parziale, cioè la \textbf{prima entità} è una generalizzazione \emph{parziale} delle identità seguenti.
 
 \begin{verse}
-	Le entità \emph{Fornitore, ProduzioneVino, Imbottigliamento, NegozioInterno, MagBianco, MagRosso, MagRosato, MagSpumante, AzManutenzione, IngrMateriePrime, Pigiatura, Fermentazione, Vinificazione, Svinatura, FornitoreTappi, FornitureUva, FornitoreBottiglie} sono prive di attributi.
+	Le entità \emph{Fornitore, ProduzioneVino, Imbottigliamento, NegozioInterno, MagBianco, MagRosso, MagRosato, MagSpumante, AzManutenzione, IngrMateriePrime, Pigiatura, Fermentazione, Vinificazione, Svinatura, FornitoreTappi, FornitureUva, FornitoreBottiglie} vengono omesse poiche' prive di attributi.
 \end{verse}
 \begin{verse}
 	\textbf{ProduzioneVino} $\gets$ \emph{IngrMateriePrime, Pigiatura, Fermentazione, Vinificazione, Svinatura}.
