--- a/src/analisiRequisiti/glossario_termini.tex
+++ b/src/analisiRequisiti/glossario_termini.tex
@@ -21,10 +21,10 @@
 		Vigneto & & Rappresenta il vigneto dalla quale proviene un determinato lotto di uva acquistato. &  Tipo Uva\\
 
 		\midrule
-		Acquirente & Privato, Azienda & Colui che ha effettuato l'ordine. Può essere un privato o un'azienda &  Ordine\\
+		Acquirente & Privato, Azienda & Colui che ha effettuato l'ordine. E' un privato o un'azienda &  Ordine\\
 
 		\midrule
-		Azienda & Fornitore, Negozio interno, A. Manutenz. & Un'azienda con cui la cantina ha rapporti, siano questi di fornitura, di vendita o di altra natura. &  Materia prima, Evento, Macchinario\\
+		Azienda & Fornitore, Negozio interno, Az. Manutenz. & Un'azienda con cui la cantina ha rapporti, siano questi di fornitura, di vendita o di altra natura. &  Materia prima, Evento, Macchinario\\
 
 		\midrule
 		Ordine & & Un ordine effettuato da un acquirente, contiene le informazioni della merce acquistata e della spedizione. &  Bottiglia di vino, Corriere, Acquirente\\
@@ -33,7 +33,7 @@
 		Corriere & & Il corriere che si occupa della spedizione di un ordine & Ordine\\
 		\midrule
 		
-		Evento & & Un evento organizzato all'interno di un negozio interno in onore di un vino prodotto dalla cantina. &  Tipo Vino, Negozio Interno\\
+		Evento & & Un evento organizzato all'interno di un negozio interno in onore di uno o piu' vini prodotti dalla cantina. &  Tipo Vino, Negozio Interno\\
 
 		\midrule
 		Linea produttiva & & Un reparto produttivo interno alla cantina. &  Dipendente, Macchinario\\
@@ -42,7 +42,7 @@
 		Dipendente & & Colui che lavora per la cantina ed è assegnato ad una linea produttiva &  Linea produttiva\\
 
 		\midrule
-		Macchinario & & Strumento utilizzato all'interno di una linea produttiva &  Linea produttiva, Azienda manutenzione\\
+		Macchinario & & Strumento meccanico o meccatronico utilizzato all'interno di una linea produttiva &  Linea produttiva, Azienda manutenzione\\
 		
 		\bottomrule
 	\end{longtable}
