General corrections and schemi are now pdfs

--- a/src/progettazioneConcettuale/_main.tex
+++ b/src/progettazioneConcettuale/_main.tex
@@ -1,4 +1,4 @@
-\subsection{Analisi entità}
+\subsection{Analisi entità} \label{analisiEntita}
     \input{src/progettazioneConcettuale/analisi_entita.tex}
     
 \subsection{Analisi delle relazioni e delle cardinalità}
