--- a/src/progettazioneLogica/_main.tex
+++ b/src/progettazioneLogica/_main.tex
@@ -7,7 +7,7 @@
 \subsection{Eliminazioni generalizzazioni}
 \input{src/progettazioneLogica/eliminazioni_generalizzazioni.tex}
 
-\subsection{Partizionamento/accorpamento di entità e relationship}
+\subsection{Partizionamento/Accorpamento di entità e Relationships}
 \input{src/progettazioneLogica/accorpamento_entita.tex}
 
 \subsection{Scelta degli identificatori principali}
