--- a/src/progettazioneConcettuale/analisi_relazioni.tex
+++ b/src/progettazioneConcettuale/analisi_relazioni.tex
@@ -49,7 +49,7 @@
 \end{itemize}
 
 \begin{verse}
-	*\emph{$(0,N)$ perchè una tipologia di vino può essere appena stato prodotto e quindi non è stato ancora imbottigliato, oppure possono essere terminate le bottiglie che lo contenevano.}
+	*\emph{$(0,N)$ perchè un determinato tipo di vino può essere appena stato prodotto e quindi non essere ancora stato imbottigliato, oppure possono essere terminate le bottiglie che lo contenevano.}
 \end{verse}
 
 \begin{itemize}
@@ -63,7 +63,7 @@
 \end{itemize}
 
 \begin{verse}
-	*\emph{(0,N) perchè una tipologia di tappo può essere appena stata acquistata e quindi non ancora assegnata a nessuna bottiglia di vino.}
+	*\emph{(0,N) perchè una tipologia di tappo può essere appena stata acquistata e quindi non essere ancora assegnata a nessuna bottiglia di vino.}
 \end{verse}
 
 \begin{itemize}
@@ -77,7 +77,7 @@
 \end{itemize}
 
 \begin{verse}
-	*\emph{(0,N) perchè una tipologia di bottiglia può essere appena stata acquistata e quindi non ancora assegnata a nessuna bottiglia di vino.}
+	*\emph{(0,N) perchè una tipologia di bottiglia può essere appena stata acquistata e quindi non essere ancora assegnata a nessuna bottiglia di vino.}
 \end{verse}
 
 \begin{itemize}
@@ -101,7 +101,7 @@
 \end{itemize}
 
 \begin{verse}
-	*\emph{Nella relazione è presente l'attributo \textbf{QuantitàBottiglie} poichè serve sapere il numero di bottiglie di vino per tipologia richieste dall'ordine.}
+	*\emph{Nella relazione è presente l'attributo \textbf{QuantitàBottiglie} poichè e' necessario tenere traccia del numero di bottiglie di vino per tipologia richieste dall'ordine.}
 \end{verse}
 
 \begin{itemize}
@@ -139,7 +139,7 @@
 \end{itemize}
 
 \begin{verse}
-	*\emph{Nella relazione è presente l'attributo \textbf{Data} perchè un evento può essere ospitato in un negozio in una sola determinata data.}
+	*\emph{Nella relazione è presente l'attributo \textbf{Data} perchè un evento può essere ospitato in un negozio solamente in una singola data.}
 \end{verse}
 
 
