--- a/src/progettazioneLogica/analisi_ridondanze.tex
+++ b/src/progettazioneLogica/analisi_ridondanze.tex
@@ -1,6 +1,6 @@
-Lo schema concettuale rappresenta un attributo ridondante, cioè il \textbf{PrezzoTotale} nell'entità \emph{Ordine}. Questo attributo è derivabile da $\sum_{n = 1}^{j} (PrezzoBottiglia_n \times Quantita'Bottiglie_n) + PrezzoSpedizione$, 
+Lo schema concettuale presenta un attributo ridondante, cioè il \textbf{PrezzoTotale} presente nell'entità \emph{Ordine}. Questo attributo è derivabile da $\sum_{n = 1}^{j} (PrezzoBottiglia_n \times Quantita'Bottiglie_n) + PrezzoSpedizione$, 
 dove $j$ è il numero di tipologie di bottiglie di vino presenti nell'ordine,
-PrezzoBottiglia è l'attributo dell'entità \emph{Bottiglia di vino}, PrezzoSpedizione è l'attributo della relazione \emph{Spedizione} e QuantitàBottiglie è l'attributo della relazione \emph{Dettaglio}. L'operazione coinvolta è la \emph{Stampa resoconto guadagno}, che avviene 1 volta alla settimana. Analizziamo la tavola dei volumi e delle operazioni:
+\textbf{PrezzoBottiglia} è l'attributo dell'entità \emph{Bottiglia di vino}, \textbf{PrezzoSpedizione} è l'attributo della relazione \emph{Spedizione} e \textbf{QuantitàBottiglie} è l'attributo della relazione \emph{Dettaglio}. L'operazione coinvolta è la \emph{Stampa resoconto guadagno}, che avviene 1 volta alla settimana. Analizziamo la tavola dei volumi e delle operazioni:
 
 \begin{center}
 	\begin{tabular}{P{2cm}P{8cm}P{4cm}}
@@ -65,15 +65,16 @@ PrezzoBottiglia è l'attributo dell'entità \emph{Bottiglia di vino}, PrezzoSped
 \end{center}
 
 \begin{flushleft}
-In questo esempio vediamo che nello schema \emph{con ridondanza} viene effettuato 1 accesso e 350 letture a settimana alla tabella \emph{Ordine} per ottenere il resoconto settimanale (semplice somma di tutti i prezzi totali degli ordini di una specifica settimana).\\
+In questo esempio vediamo che nello schema \emph{con ridondanza} viene effettuato 1 accesso e 350 letture a settimana alla tabella \emph{Ordini} per ottenere il resoconto settimanale (semplice somma di tutti i prezzi totali degli ordini di una specifica settimana).\\
 \vspace{0.5cm}
 Nello schema \emph{senza ridondanza}, invece, per ogni ordine occorrera' accedere alle seguenti tabelle:
 \begin{itemize}
-	\item \emph{BottigliaDiVino} per conoscere il prezzo della singola bottiglia dell'ordine;
-	\item \emph{Spedizione} per conoscere il prezzo della spedizione;
-	\item \emph{Dettaglio} per conoscere il prezzo totale delle bottiglie acquistate.
+	\item \emph{BottiglieDiVino} per conoscere il prezzo della singola bottiglia dell'ordine;
+	\item \emph{Spedizioni} per conoscere il prezzo della spedizione;
+	\item \emph{Dettagli} per conoscere il prezzo totale delle bottiglie acquistate.
 \end{itemize}
 Si avranno $(350\times3)\times350$, dove $(350\times3)$ sono gli accessi totali alle tre tabelle citate prima e 350 sono le letture della tabella \emph{Ordini}. In totale si avranno $367500$ letture.\\
-\vspace{0.5cm}
-In conclusione, dopo quest'analisi, si è deciso di mantenere l'attributo \textbf{Prezzo totale} in \emph{Ordine}.
+\begin{verse}
+	Alla luce dei risultati emersi della precedente analisi si e' deciso di mantenere l'attributo \textbf{Prezzo totale} in \emph{Ordini}.
+\end{verse}
 \end{flushleft}
