--- a/src/progettazioneLogica/diagramma_er_ristrutturato.tex
+++ b/src/progettazioneLogica/diagramma_er_ristrutturato.tex
@@ -1,2 +1,2 @@
 \subsection{Diagramma ER ristrutturato}
-\centerline{\includegraphics[width=18cm,keepaspectratio,angle=0]{src/progettazioneLogica/cantina_er_ristrutturato.png}}
+\centerline{\includegraphics[width=18cm,keepaspectratio,angle=0]{src/progettazioneLogica/cantina_er_ristrutturato.pdf}}
