--- a/src/queryIndici/query.tex
+++ b/src/queryIndici/query.tex
@@ -1,14 +1,12 @@
 \begin{enumerate}
-	\item \textbf{Bottiglia/e di vino più venduta/e dell'anno 2019 con la relativa quantità}
-	\item \textbf{Numero di tipi di vino prodotti divisi per colore}
+	\item \textbf{Bottiglia/e di vino più venduta/e dell'anno 2019 con la relativa quantità}\\
+	\centerline{\includegraphics{src/queryIndici/assets/Query1.png}}
+	\item \textbf{Numero di tipi di vino prodotti divisi per colore}\\
+	\centerline{\includegraphics{src/queryIndici/assets/Query2.png}} 
 	\item \textbf{Coppie di aziende che hanno acquistato lo stesso giorno, con il relativo giorno, in ordine alfabetico}
 	\item \textbf{Lista dei dipendenti (ordinati in ordine alfabetico) che sono supervisori di altri dipendenti}
+	\centerline{\includegraphics{src/queryIndici/assets/Query4.png}}
 	\item \textbf{Lista dei dipendenti (nome, cognome), con inizio e fine turno, ordinati in modo decrescente sull'inizio del turno, che sono a lavorare il giorno 12 giugno 2019}
+	\centerline{\includegraphics{src/queryIndici/assets/Query5.png}}
 	
 \end{enumerate}
-
-	+-----------------+------+\\
-	| BottigliaDiVino | Sum  |\\
-	+-----------------+------+\\
-	|              13 |   59 |\\
-	+-----------------+------+\\
