--- a/src/analisiRequisiti/analisi_requisiti.tex
+++ b/src/analisiRequisiti/analisi_requisiti.tex
@@ -1,9 +1,9 @@
-L'interesse principale di questo progetto e' modellare una base di dati che supporti l'operativita' della cantina vinicola \emph{NomeCantina}. La principale merce prodotta e' la \textbf{bottiglia di vino} che rappresenta l'unione di una bottiglia di vetro, di un tappo e di un tipo di vino. Ogni bottiglia è identificata dal nome del vino e dall'annata di esso. Dati importanti per tale prodotto sono il prezzo, il numero di unità prodotte e vendute, oltre che dal tipo di tappo e dal tipo di bottiglia.
-Relativamente ai tipi di \textbf{vino}, identificati dal nome, rappresentiamo la gradazione alcolica, il tempo di fermentazione e l'uva utilizzata oltre che lo stato produttivo, ovvero se il vino viene prodotto ancora o è ormai fuori commercio. Importante registrare la classificazione del vino: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.).\\ Ovviamente la cantina acquista esternamente da altre aziende le proprie materie prime che vanno a formare il prodotto finale. Le \textbf{materie prime} che vengono acquistate vengono identificate con un ID univoco. Se la materia prima è l'uva questa viene rappresentata dall'anno di raccolta, dal nome e dal colore. Se, invece, la materia prima sono i tappi questa viene rappresentata dalla forma e dal materiale, infine se la materia prima sono le bottiglie, questa viene rappresentata dalla capacità e dal colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina sia per i tappi che per le bottigle.\\
-Un tipo d'uva proviene da un tipo di \textbf{vigneto}, rappresentato da un ID univoco e dalla loro posizione geografica. \\
-Le aziende con cui la cantina ha relazione sono molteplici. Queste \textbf{aziende} si dividono in fornitori, aziende di manutenzione macchinari e negozi interni della cantina. Le aziende sono identificate tramite un ID univoco e sono caratterizzate dal nome, dalla Partita IVA, dal nome e dal cognome del referente oltre che dal numero di telefono, dalla email aziendale e dalla sua posizione geografica (che corrisponde con l'indirizzo di spedizione). Per le aziende che sono fornitori rappresentiamo poi la tipologia di materia prima fornita, sia essa uva, tappi o bottiglie.\\
-Ovviamente le bottiglie di vino possono essere spedite in una determinata quantità in un \textbf{ordine} di vendita. Relativamente ad un ordine rappresentiamo un ID univoco, la data in cui è stato effettuato, il \textbf{corriere} (rappresentato tramite un ID ed un nome commerciale.) a cui è stata affidato, la data di spedizione, la data di consegna e il prezzo totale (che deve corrispondere al prodotto tra il prezzo delle bottiglie di vino acquistate e il relativo prezzo sommato al costo della spedizione).\\
-Ogni ordine viene venduto ad un acquirente, che può essere un'azienda o un \textbf{privato}. Per i privati, identificati da un ID, rappresentiamo il nome, il cognome, il numero di telefono e l'email oltre che l'indirizzo di residenza (che corrisponde con l'indirizzo di spedizione).\\
+L'interesse principale di questo progetto e' modellare una base di dati che supporti l'operativita' della cantina vinicola \emph{NomeCantina}. La principale merce prodotta e' la \textbf{bottiglia di vino} che e' la composizione una bottiglia di vetro, di un tappo e di un tipo di vino. Ogni bottiglia è identificata dal nome del vino e dall'anno (\emph{annata}) di imbottigliamento. Per ogni prodotto e' necessario tenere traccia del prezzo, del numero di unità prodotte e vendute, oltre che del tipo di tappo e del tipo di bottiglia.
+Relativamente ai tipi di \textbf{vino}, identificati dal nome, rappresentiamo la gradazione alcolica, il tempo di fermentazione e l'uva utilizzata oltre che lo stato produttivo, ovvero se il vino viene prodotto ancora o è, ad oggi, fuori commercio. E' inoltre importante registrare la classificazione del vino: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.).\\ Ovviamente la cantina acquista da altre aziende le materie prime che vanno a formare il prodotto finale. Le \textbf{materie prime} che vengono acquistate vengono identificate da un ID univoco. Se la materia prima è l'uva questa viene rappresentata dall'anno di raccolta, dal nome e dal colore. Se, invece, la materia prima sono i tappi questa viene rappresentata dalla forma e dal materiale, infine se la materia prima sono le bottiglie, questa viene rappresentata dalla capacità e dal colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina per i tappi e per le bottiglie, ma non per l'uva poiche' tutta l'uva viene utilizzata immediatamente dopo la ricezione.\\
+Un tipo d'uva proviene da un \textbf{vigneto}, rappresentato da un ID univoco e dalla loro posizione geografica. \\
+Le aziende con cui la cantina ha relazione sono molteplici. Queste \textbf{aziende} si dividono in \emph{fornitori}, \emph{aziende di manutenzione macchinari} e \emph{negozi interni} della cantina. Le aziende sono identificate tramite un ID univoco e sono caratterizzate dal proprio nome commerciale, dalla Partita IVA, dal nome e dal cognome del referente oltre che dal numero di telefono, dalla email aziendale e dalla sua posizione geografica (che corrisponde con l'indirizzo di spedizione). Per le aziende che sono fornitori rappresentiamo poi la tipologia di materia prima fornita, sia essa uva, tappi o bottiglie.\\
+Ovviamente le bottiglie di vino devono poter essere spedite in una determinata quantità in un \textbf{ordine} di vendita. Relativamente ad un ordine rappresentiamo un ID univoco, la data in cui è stato effettuato, il \textbf{corriere} (rappresentato tramite un ID ed un nome commerciale.) a cui è stata affidata la consegna, la data di spedizione, l'eventuale data di consegna e il prezzo totale (che deve corrispondere al prodotto tra la quantita' delle bottiglie di vino acquistate ed il relativo prezzo, sommato al costo della spedizione).\\
+Ogni ordine viene effettuato da un acquirente, che può essere un'azienda o un \textbf{privato}. Per i privati, identificati da un ID, rappresentiamo il nome, il cognome, il numero di telefono e l'email oltre che l'indirizzo di residenza (che corrisponde con l'indirizzo di spedizione).\\
 E' di consuetudine, per la cantina \emph{NomeCantina}, organizzare degli eventi all'interno dei propri negozi. Gli \textbf{eventi} hanno una tematica che è rappresentata da un nostro vino e vengono definiti tramite il titolo dell'evento e il numero di edizione. Ovviamente ogni evento ha una data prefissata in cui si svolgerà.
 Riguardo al reparto produttivo sono presenti tutte le tipologie di lavorazione dell'uva per la produzione del vino. Queste \textbf{linee produttive} sono l'ingresso delle materie prime, la pigiatura, la fermentazione, la vinificazione e la svinatura. Oltre a queste esistono altri reparti produttivi come l'imbottigliamento e il magazzino dove le bottiglie di vino vengono divise per la colorazione del proprio vino (rosso, bianco, rosato e spumante).Nel magazzino viene tenuto traccia della quantità delle bottiglie. Tutti questi reparti sono identificati tramite un identificativo.\\
 In ognugno di questi reparti lavorano dei \textbf{dipendeti} in determinati turni di lavoro. Per ogni dipendete (identificato tramite il codice fiscale) viene registrato il nome e il cognome. Ogni dipendente avrà un supervisore a cui fare riferimento e ogni linea produttiva sarà diretta da un dipendente dell'azienda.\\
