--- a/src/analisiRequisiti/strutturazione_requisiti.tex
+++ b/src/analisiRequisiti/strutturazione_requisiti.tex
@@ -1,115 +1,116 @@
 \begin{center}
 	\begin{tabular}{P{16cm}}
 		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A BOTTIGLIA DI VINO}} \\
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A BOTTIGLIA DI VINO}}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     \\
 		\midrule
-		Una bottiglia di vino è il prodotto finale che viene venduto dalla cantina, ed e' la composizione di una bottiglia di vetro, di un tappo e di un tipo di vino. Ogni bottiglia è identificata dal nome del vino e dall'anno (\emph{annata}) di imbottigliamento. Per ogni prodotto e' necessario tenere traccia del prezzo, del numero di unità prodotte e vendute, oltre che del tipo di tappo e del tipo di bottiglia. Nel magazzino viene tenuto traccia della quantità delle bottiglie. Le bottiglie di vino possono essere spedite in una determinata quantità negli ordine di vendita\\
+		Una bottiglia di vino è il prodotto finale che viene venduto dalla cantina, ed e' la composizione di una bottiglia di vetro, di un tappo e di un tipo di vino. Ogni bottiglia è identificata dal nome del vino e dall'anno (\emph{annata}) di imbottigliamento. Per ogni prodotto e' necessario tenere traccia del prezzo, del numero di unità prodotte e vendute, oltre che del tipo di tappo e del tipo di bottiglia. Nel magazzino viene tenuto traccia della quantità delle bottiglie. Le bottiglie di vino possono essere spedite in una determinata quantità negli ordine di vendita \\
 		\bottomrule
 	\end{tabular}
 
 	\vspace{0.5cm}
-	
+
 	\begin{tabular}{P{16cm}}
 		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A TIPO DI VINO}} \\
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A TIPO DI VINO}}                                                                                                                                                                                                                                                                                                                                                                                          \\
 		\midrule
 		Relativamente ai tipi di vino, identificati dal nome, rappresentiamo la gradazione alcolica, il tempo di fermentazione e l'uva utilizzata oltre che lo stato produttivo, ovvero se il vino viene prodotto ancora o è, ad oggi, fuori commercio. Importante registrare la classificazione del vino: vini a denominazione d'origine controllata e garantita (D.O.C.G.); vini a denominazione d'origine controllata (D.O.C.); vini ad indicazione geografica tipica (I.G.T.). \\
 		\bottomrule
 	\end{tabular}
 
 	\vspace{0.5cm}
-	
+
 	\begin{tabular}{P{16cm}}
 		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A MATERIA PRIMA}} \\
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A MATERIA PRIMA}}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                \\
 		\midrule
-		Le materie prime che vengono acquistate vengono identificate da un ID univoco. Se la materia prima è l'uva questa viene rappresentata dall'anno di raccolta, dal nome e dal colore. Se, invece, la materia prima sono i tappi questa viene rappresentata dalla forma e dal materiale, infine se la materia prima sono le bottiglie, questa viene rappresentata dalla capacità e dal colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina per i tappi e per le bottiglie, ma non per l'uva poiche' tutta l'uva viene utilizzata immediatamente dopo la ricezione.\\
+		Le materie prime che vengono acquistate vengono identificate da un ID univoco. Se la materia prima è l'uva questa viene rappresentata dall'anno di raccolta, dal nome e dal colore. Se, invece, la materia prima sono i tappi questa viene rappresentata dalla forma e dal materiale, infine se la materia prima sono le bottiglie, questa viene rappresentata dalla capacità e dal colore. Inoltre è presente il dato che identifica la quantità posseduta dalla cantina per i tappi e per le bottiglie, ma non per l'uva poiche' tutta l'uva viene utilizzata immediatamente dopo la ricezione. \\
 		\bottomrule
 	\end{tabular}
 
 	\vspace{0.5cm}
-	
+
 	\begin{tabular}{P{16cm}}
 		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A VIGNETO}} \\
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A VIGNETO}}     \\
 		\midrule
-		I vigneti sono rappresentati da un ID univoco e dalla loro posizione geografica.\\
+		I vigneti sono rappresentati da un ID univoco e dalla sua posizione geografica. \\
 		\bottomrule
 	\end{tabular}
-	
+
 	\vspace{0.5cm}
-	
+
 	\begin{tabular}{P{16cm}}
 		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD AZIENDA}} \\
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD AZIENDA}}                                                                                                                                                                                                                                                                                                                                                                                                                                                        \\
 		\midrule
-		Le aziende si dividono in fornitori, aziende di manutenzione macchinari e negozi interni della cantina. Le aziende sono identificate tramite un ID univoco e sono caratterizzate dal nome commerciale, dalla Partita IVA, dal nome e dal cognome del referente oltre che dal numero di telefono, dalla email aziendale e dalla sua posizione geografica (che corrisponde con l'indirizzo di spedizione). Per le aziende che sono fornitori rappresentiamo poi la tipologia di materia prima fornita, sia essa uva, tappi o bottiglie.\\
+		Le aziende si dividono in fornitori, aziende di manutenzione macchinari e negozi interni della cantina. Le aziende sono identificate univocamente attraverso la loro Partita IVA e sono caratterizzate dal nome commerciale, dal cognome e nome del referente oltre che dal numero di telefono, dalla email aziendale e dalla sua posizione geografica (che corrisponde con l'indirizzo di spedizione). Per le aziende che sono fornitori rappresentiamo poi la tipologia di materia prima fornita, sia essa uva, tappi o bottiglie. \\
 		\bottomrule
 	\end{tabular}
-	
+
 	\vspace{0.5cm}
-	
+
 	\begin{tabular}{P{16cm}}
 		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD ORDINE}} \\
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD ORDINE}}                                                                                                                                                                                                                                                                                          \\
 		\midrule
-		Relativamente ad un ordine rappresentiamo un ID univoco, la data in cui è stato effettuato, il corriere a cui è stata affidata la consegna, la data di spedizione, l'eventuale data di consegna e il prezzo totale (che deve corrispondere al prodotto tra la quantita' delle bottiglie di vino acquistate ed il relativo prezzo, sommato al costo della spedizione).\\
+		Relativamente ad un ordine rappresentiamo un ID univoco, la data in cui è stato effettuato, il corriere a cui è stata affidata la consegna, la data di spedizione, l'eventuale data di consegna e il prezzo totale (che deve corrispondere al prodotto tra la quantita' delle bottiglie di vino acquistate ed il relativo prezzo, sommato al costo della spedizione). \\
 		\bottomrule
 	\end{tabular}
-	
+
 	\vspace{0.5cm}
-	
+
 	\begin{tabular}{P{16cm}}
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A CORRIERE}} \\
 		\midrule
-		Il corriere è rappresentato tramite un ID ed un nome commerciale.\\
+		Il corriere è rappresentato tramite un ID ed un nome commerciale.             \\
 		\bottomrule
 	\end{tabular}
-	
+
 	\vspace{0.5cm}
-	
+
 	\begin{tabular}{P{16cm}}
 		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A PRIVATO}} \\
-		Per i privati, identificati da un ID, rappresentiamo il nome, il cognome, il numero di telefono e l'email oltre che l'indirizzo di residenza (che corrisponde con l'indirizzo di spedizione).\\
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A PRIVATO}}                                                                                                                  \\
+		Per i privati, identificati da un ID, rappresentiamo il nome, il cognome, il numero di telefono e l'email oltre che l'indirizzo di residenza (che corrisponde con l'indirizzo di spedizione). \\
 		\bottomrule
 	\end{tabular}
-	
+
 	\vspace{0.5cm}
-	
+
 	\begin{tabular}{P{16cm}}
 		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD EVENTO}} \\
-		Gli eventi hanno una tematica che è rappresentata da un nostro vino e vengono definiti tramite il titolo dell'evento e il numero di edizione. Ovviamente ogni evento ha una data prefissata in cui si svolgerà.\\
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE AD EVENTO}}                                                                                                                                    \\
+		Gli eventi hanno una tematica che è rappresentata da un nostro vino e vengono definiti tramite il titolo dell'evento e il numero di edizione. Ovviamente ogni evento ha una data prefissata in cui si svolgerà. \\
 		\bottomrule
 	\end{tabular}
-	
+
 	\vspace{0.5cm}
-		
+
 	\begin{tabular}{P{16cm}}
 		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A LINEA PRODUTTIVA}} \\
-		Le linee produttive sono l'ingresso delle materie prime, la pigiatura, la fermentazione, la vinificazione e la svinatura. Oltre a queste esistono altri reparti produttivi come l'imbottigliamento e il magazzino dove le bottiglie di vino vengono divise per la colorazione del proprio vino (rosso, bianco, rosato e spumante).Nel magazzino viene tenuto traccia della quantità delle bottiglie. Tutti questi reparti sono identificati tramite un identificativo. In ognugno di questi reparti lavorano dei dipendeti in un determinati turni di lavoro. Per ogni linea produttiva sono presenti dei macchinari che aiutano i dipendenti nelle mansioni quotidiane.\\
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A LINEA PRODUTTIVA}}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         \\
+		Le linee produttive sono l'ingresso delle materie prime, la pigiatura, la fermentazione, la vinificazione e la svinatura. Oltre a queste esistono altri reparti produttivi come l'imbottigliamento e il magazzino dove le bottiglie di vino vengono divise per la colorazione del proprio vino (rosso, bianco, rosato e spumante). Nel magazzino viene tenuta traccia della quantità delle bottiglie conservate. Tutti questi reparti sono identificati tramite un identificativo univoco. Per ogni linea produttiva sono presenti dei macchinari che aiutano i dipendenti nelle mansioni quotidiane. \\
 		\bottomrule
 	\end{tabular}
-	
+
 	\vspace{0.5cm}
-	
+
 	\begin{tabular}{P{16cm}}
 		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A DIPENDENTE}} \\
-		Per ogni dipendete (identificato tramite il codice fiscale) viene registrato il nome e il cognome. Ogni dipendente avrà un supervisore a cui fare riferimento e ogni linea produttiva sarà diretta da un dipendente dell'azienda.\\
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A DIPENDENTE}}                                                                                                                                                                                                                                                                                                   \\
+		Per ogni dipendete (identificato tramite il codice fiscale) viene registrato il nome e il cognome. Ogni dipendente (esclusi alcuni supervisori) ha un supervisore a cui fare riferimento e ogni linea produttiva e' diretta da un supervisore. Per ogni dipendente e' necessario tenere traccia dei turni di lavoro effettuati e della linea produttiva in cui i vari turni sono svolti. \\
 		\bottomrule
 	\end{tabular}
-	
+
 	\vspace{0.5cm}
-	
+
 	\begin{tabular}{P{16cm}}
 		\toprule
-		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A MACCHINARIO}} \\
-		I macchinari sono identificati tramite un codice univoco. Ad ogni macchinario viene fatta una manutenzione periodica, quindi è utile tenere traccia della data della prossima manutenzione. I macchinari avranno anche un nome commerciale e la data di acquisto. Le manutenzioni avranno un costo e verrano eseguite in una determinata data. Le manutenzioni vengono eseguite da aziende esterne.\\
+		\rowcolor[rgb]{.929, .929, .929} \textbf {\large {FRASI RELATIVE A MACCHINARIO}}                                                                                                                                                                                    \\
+		I macchinari sono identificati tramite un ID univoco. Ad ogni macchinario viene fatta una manutenzione periodica, è quindi utile tenere traccia della data della prossima manutenzione. I macchinari avranno anche un nome rappresentatativo e la data di acquisto. \\
+		Le manutenzioni hanno un costo e vengono eseguite in una determinata data. Le manutenzioni vengono eseguite da aziende esterne.                                                                                                                                     \\
 		\bottomrule
 	\end{tabular}
-	
+
 \end{center}
