--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -1,6 +1,6 @@
 Gli attributi contraddistinti dal carattere tipografico \textbf{\emph{grassetto}} sono (o fanno parte) della chiave primaria della relativa tabella. \\
 Il simbolo $\gets$ identifica una generalizzazione completa, cioè la \textbf{prima entità} è una generalizzazione \emph{completa} delle entità seguenti.\\
-Il simbolo $\Leftarrow$ invece, identifica una generalizzazione parziale, cioè la \textbf{prima entità} è una generalizzazione \emph{parziale} delle identità seguenti.
+Il simbolo $\Leftarrow$ identifica una generalizzazione parziale, cioè la \textbf{prima entità} è una generalizzazione \emph{parziale} delle entità seguenti.
 
 \begin{verse}
 	Le entità \emph{Fornitore, ProduzioneVino, Imbottigliamento, NegozioInterno, MagBianco, MagRosso, MagRosato, MagSpumante, AzManutenzione, IngrMateriePrime, Pigiatura, Fermentazione, Vinificazione, Svinatura, FornitoreTappi, FornitureUva, FornitoreBottiglie} vengono omesse poiche' prive di attributi.
