Specificazione volume Ordine uguale a volume Dettaglio, cioò caso migliore

--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
 \title{%
     Progetto per il corso di Basi di Dati \\
     \large LT in Informatica, Universita degli studi di Padova}
-\author{Niccolo Mantovani, 1234567
+\author{Niccolò Mantovani, 1234567
     \and
     Filippo Pinton, 1234567}
 \date{}
