--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -19,7 +19,7 @@ Il simbolo $\Leftarrow$ identifica una generalizzazione parziale, cioè la \text
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} Attributo & Tipo    & Descrizione                                                                                             \\
 		\midrule
-		\textbf{ID}                                & INTEGER & Identifica univocamente il vigneto                                                                      \\
+		\textbf{Id}                                & INTEGER & Identifica univocamente il vigneto                                                                      \\
 		\midrule
 		Indirzzo                                   & VARCHAR & Posizione geografica del vigneto.  Attributo composto: stato, città, provincia, cap, via, numero civico \\
 		\bottomrule
@@ -85,7 +85,7 @@ Il simbolo $\Leftarrow$ identifica una generalizzazione parziale, cioè la \text
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} Attributo & Tipo    & Descrizione                              \\
 		\midrule
-		\textbf{ID}                                & INTEGER & Identifica univocamente la materia prima \\
+		\textbf{Id}                                & INTEGER & Identifica univocamente la materia prima \\
 		\bottomrule
 	\end{tabular}
 
@@ -149,7 +149,7 @@ Il simbolo $\Leftarrow$ identifica una generalizzazione parziale, cioè la \text
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} Attributo & Tipo    & Descrizione                                                                                                      \\
 		\midrule
-		\textbf{ID}                                & INTEGER & Identifica univocamente un ordine di vendita ricevuto                                                            \\
+		\textbf{Id}                                & INTEGER & Identifica univocamente un ordine di vendita ricevuto                                                            \\
 		\midrule
 		PrezzoTotale                               & INTEGER & Prezzo complessivo dell'ordine, uguale alla somma del prezzo di spedizione e del costo delle bottigle acquistate \\
 		\midrule
@@ -243,7 +243,7 @@ Il simbolo $\Leftarrow$ identifica una generalizzazione parziale, cioè la \text
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} Attributo & Tipo    & Descrizione                                                                                              \\
 		\midrule
-		\textbf{NumBottiglie}                      & INTEGER & Rappresenta la quantità delle bottiglie di vino, divise per tipologia di colore, contenute nel magazzino \\
+		NumBottiglie & INTEGER & Rappresenta la quantità delle bottiglie di vino, divise per tipologia di colore, contenute nel magazzino \\
 		\bottomrule
 	\end{tabular}
 
