--- a/src/progettazioneLogica/eliminazioni_generalizzazioni.tex
+++ b/src/progettazioneLogica/eliminazioni_generalizzazioni.tex
@@ -13,7 +13,7 @@ Lo schema concenttuale presenta molte generalizzazioni. Si procede all'analisi d
 \begin{flushleft}
 	\textbf{\large{Acquirente}}\\
 	L'entità \emph{Acquirente} presenta un attributo ed una relazione. A loro volta anche le entità figlie \emph{Azienda e Privato} hanno attributi significativi. Per ristrutturare questa generalizzazione si è deciso di creare due relazioni differenti. La prima si chiama \textbf{IsAzienda} dove la cardinalità da \emph{Azienda} ad \emph{Acquirente} è $(0,1)$ poichè un'azienda può non essere un acquirente, mentre da \emph{Acquirente} ad \emph{Azienda} è $(0,1)$ poichè non tutti gli acquirenti sono un'azienda.
-	La seconda relazione si chiama \textbf{IsPrivato} ed è stata creata utilizzando lo stesso ragionamento di IsAzienda, ovvero la cardinalità da \emph{Acquirente} a \emph{Privato} è $(0,1)$ poichè non tutti gli acquirenti sono privati, mentre da \emph{Privato} ad \emph{Acquirente} è $(1,1)$ poichè un privato è sempre un acquirente. Le entità \emph{Azienda} e \emph{Privato} mantengono gli attributi visti in precedenza, in più ad \emph{Acquirente} verrà aggiunto l'attributo \emph{NumAcquirente} che sarà chiave esterna ad \emph{Acquirente}. Si è deciso di aggiungere questo attributo consapevoli dell'eventualità che quest'ultimo possa essere \textbf{NULL} visto che il numero di aziende che non sono acquirenti (es. fornitori) è minore di quelle che lo sono.
+	La seconda relazione si chiama \textbf{IsPrivato} ed è stata creata utilizzando lo stesso ragionamento di IsAzienda, ovvero la cardinalità da \emph{Acquirente} a \emph{Privato} è $(0,1)$ poichè non tutti gli acquirenti sono privati, mentre da \emph{Privato} ad \emph{Acquirente} è $(1,1)$ poichè un privato è sempre un acquirente. Le entità \emph{Azienda} e \emph{Privato} mantengono gli attributi visti in precedenza, in più ad \emph{Azienda} verrà aggiunto l'attributo \emph{NumAcquirente} che sarà chiave esterna ad \emph{Acquirente}. Si è deciso di aggiungere questo attributo consapevoli dell'eventualità che quest'ultimo possa essere \textbf{NULL} visto che il numero di aziende che non sono acquirenti (es. fornitori) è minore di quelle che lo sono.
 \end{flushleft}
 
 \begin{flushleft}
