--- a/src/progettazioneLogica/schema_relazionale.tex
+++ b/src/progettazioneLogica/schema_relazionale.tex
@@ -105,7 +105,7 @@
 				\midrule
 				Manutenzioni.Macchinario $\to$ Macchinari.Id                                                                          \\
 				\midrule
-				Manutenzioni.Azienda $\to$ Aziende.Id                                                                                 \\                                
+				Manutenzioni.Azienda $\to$ Aziende.PartitaIVA                                                                                 \\                                
 				\midrule
 				\rowcolor[rgb]{.929, .929, .929} \textbf{Macchinari} (\underline{Id}, Nome, DataProssimaManutenzione, DataAcquisto, LineaProduttiva)                   \\
 				\midrule
