Added queries (not results)

--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 \usepackage{longtable}
 \usepackage{graphicx}
 \usepackage{amssymb}
+\usepackage{tabularx}
 
 
 \newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
