--- a/src/progettazioneLogica/identificatori_principali.tex
+++ b/src/progettazioneLogica/identificatori_principali.tex
@@ -1,11 +1,10 @@
 Oltre agli identificatori visti nella sezione \textbf{\ref{analisiEntita}}, sono stati aggiunti nuovi identificatori primari:
-
 \begin{itemize}
 	\item Si è deciso di aggiungere l'attributo \textbf{ID} (che funge da chiave primaria ed esterna all'attributo \textbf{PartitaIVA} di \emph{Azienda}) all' entità \emph{Fornitore};
-	\item All'entità \emph{Privato} è stato aggiunto l'attributo \textbf{ID} che ha il ruolo di chiave primaria e di chiave esterna all'attributo \textbf{PartitaIVA} di \emph{Acquirente};
+	\item All'entità \emph{Privato} è stato aggiunto l'attributo \textbf{ID} che ha il ruolo di chiave primaria e di chiave esterna all'attributo \textbf{ID} di \emph{Acquirente};
 	\item L'entità \emph{NegozioInterno} possiede un attributo \textbf{ID} che è chiave primaria e chiave esterna all'attributo \textbf{PartitaIVA} di \emph{Azienda};
 	\item L'entità \emph{Informazione} appena aggiunta ha come chiave primaria l'attributo \textbf{ID};
-	\item L'entità \emph{Indirizzo} appena aggiunta ha come chiave primaria l'attributo \textbf{ID} che è anche chiave esterna all'attributo \textbf{ID} di \emph{Informazione o Vigneto};
+	\item L'entità \emph{Indirizzo} appena aggiunta ha come chiave primaria l'attributo \textbf{ID} che è anche chiave esterna all'attributo \textbf{Indirizzo} di \emph{Informazione} e \emph{Vigneto};
 	\item Le entità \emph{Uva, Tappo, Bottiglia} hanno ereditato l'attributo \textbf{ID} dalla generalizzazione \emph{MateriaPrima};
 	\item E' stato aggiunto l'attributo \textbf{ID}, che è chiave primaria, a \emph{BottgiliaDiVino ed Evento} per rendere più semplice le relazioni con queste entità.
 \end{itemize}
