--- a/src/queryIndici/query.tex
+++ b/src/queryIndici/query.tex
@@ -1,12 +1,152 @@
 \begin{enumerate}
-	\item \textbf{Bottiglia/e di vino più venduta/e dell'anno 2019 con la relativa quantità}\\
-	\centerline{\includegraphics{src/queryIndici/assets/Query1.png}}
-	\item \textbf{Numero di tipi di vino prodotti divisi per colore}\\
-	\centerline{\includegraphics{src/queryIndici/assets/Query2.png}} 
-	\item \textbf{Coppie di aziende che hanno acquistato lo stesso giorno, con il relativo giorno, in ordine alfabetico}
-	\item \textbf{Lista dei dipendenti (ordinati in ordine alfabetico) che sono supervisori di altri dipendenti}
-	\centerline{\includegraphics{src/queryIndici/assets/Query4.png}}
-	\item \textbf{Lista dei dipendenti (nome, cognome), con inizio e fine turno, ordinati in modo decrescente sull'inizio del turno, che sono a lavorare il giorno 12 giugno 2019}
-	\centerline{\includegraphics{src/queryIndici/assets/Query5.png}}
-	
+	\item \textbf{Stampa resoconto settimanale fatturato.}\\
+	      \begin{tabularx}{\textwidth}{|X|X|}
+			  \hline
+			  \vspace{.01mm}
+		      SELECT
+		      SUM(Ordini.PrezzoTotale)
+		      FROM
+		      Ordini
+		      WHERE
+		      Ordini.Data <= CURRENT\_TIMESTAMP
+		      AND Ordini.Data >= DATE\_ADD(CURRENT\_TIMESTAMP, INTERVAL -7 DAY);
+		       &
+		      \\
+		      \hline
+	      \end{tabularx}
+	\item \textbf{Bottiglia/e di vino più venduta/e dell'anno 2019 con la relativa quantità.}\\
+	      \begin{tabularx}{\textwidth}{|X|X|}
+		      \hline
+			  \vspace{.01mm}
+		      CREATE VIEW OrdineQuantita AS
+		      SELECT
+		      Vini.Nome,
+		      SUM(Dettagli.QuantitaBottiglie) AS BottiglieVendute
+		      FROM
+		      (
+		      SELECT
+		      Dettagli.*
+		      FROM
+		      Dettagli,
+		      Ordini
+		      WHERE
+		      DATE\_FORMAT(Ordini.Data, '\%Y') = '2019'
+		      AND Ordini.Id = Dettagli.Ordine
+		      ) AS Dettagli,
+		      BottiglieDiVino,
+		      Vini
+		      WHERE
+		      Dettagli.BottigliaDiVino = BottiglieDiVino.Id
+		      AND Vini.Nome = BottiglieDiVino.Vino
+		      GROUP BY
+		      Dettagli.BottigliaDiVino;
+
+		      SELECT
+		      OrdineQuantita.Nome,
+		      OrdineQuantita.BottiglieVendute
+		      FROM
+		      OrdineQuantita
+		      WHERE
+		      OrdineQuantita.BottiglieVendute IN (
+		      SELECT
+		      MAX(OrdineQuantita.BottiglieVendute)
+		      FROM
+		      OrdineQuantita
+		      )
+		       &
+		      \\
+		      \hline
+	      \end{tabularx}
+	\item \textbf{Lista dei vini prodotti con la relativa tipologia di uva utilizzata e il fornitore di quest'ultima.}\\
+	      \begin{tabularx}{\textwidth}{|X|X|}
+		      \hline
+			  \vspace{.01mm}
+		      SELECT
+		      Informazioni.Nome,
+		      TipiUva.Nome,
+		      Vini.Nome
+		      FROM
+		      Vini,
+		      Uva,
+		      Informazioni,
+		      Aziende,
+		      TipiUva,
+		      FornituraUva
+		      WHERE
+		      Vini.Uva = Uva.Id
+		      AND Uva.Fornitore = Aziende.PartitaIVA
+		      AND Aziende.InformazioniAggiuntive = Informazioni.Id
+		       &
+		      \\
+		      \hline
+	      \end{tabularx}
+	\item \textbf{Lista dei dipendenti (ordinati in ordine alfabetico) che sono supervisori di altri dipendenti.}\\
+	      \begin{tabularx}{\textwidth}{|X|X|}
+		      \hline
+			  \vspace{.01mm}
+		      SELECT
+		      DISTINCT D1.Nome,
+		      D1.Cognome
+		      FROM
+		      Dipendenti as D1,
+		      Dipendenti as D2
+		      WHERE
+		      D2.Referente = D1.CodiceFiscale
+		      ORDER BY
+		      D1.Nome,
+		      D1.Cognome;
+		       &
+		      \\
+		      \hline
+	      \end{tabularx}
+	\item \textbf{Lista dei dipendenti (nome, cognome) che hanno lavorato il giorno 12 giugno 2019, con inizio e fine turno, ordinati in modo decrescente in base all'inizio del turno.}\\
+	      \begin{tabularx}{\textwidth}{|X|X|}
+		      \hline
+			  \vspace{.01mm}
+		      SELECT
+		      D.Nome,
+		      D.cognome,
+		      T.InizioTurno,
+		      T.FineTurno
+		      FROM
+		      Dipendenti as D,
+		      Turni as T
+		      WHERE
+		      T.Dipendente = D.CodiceFiscale
+		      AND DATE\_FORMAT(T.InizioTurno, '%Y-%m-%d') = '2019-10-22'
+		      ORDER BY
+		      T.InizioTurno DESC;
+		       &
+		      \\
+		      \hline
+	      \end{tabularx}
+	\item \textbf{Lista degli acquirenti che hanno acquistato il maggior valore di bottiglie di vino dalla cantina.}\\
+	      \begin{tabularx}{\textwidth}{|X|X|}
+		      \hline
+			  \vspace{.01mm}
+		      CREATE VIEW SpeseTotali AS
+		      SELECT
+		      Ordini.Acquirente,
+		      SUM(Ordini.PrezzoTotale) AS SpesaTotale
+		      FROM
+		      Ordini
+		      GROUP BY
+		      Ordini.Acquirente;
+
+		      SELECT
+		      SpeseTotali.Acquirente,
+		      SpeseTotali.SpesaTotale
+		      FROM
+		      SpeseTotali
+		      WHERE
+		      SpeseTotali.SpesaTotale IN (
+		      SELECT
+		      MAX(SpeseTotali.SpesaTotale)
+		      FROM
+		      SpeseTotali
+		      );
+		       &
+		      \\
+		      \hline
+	      \end{tabularx}
 \end{enumerate}
